# cognizant

./: .main.cpp.kate-swp  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  test.sh
source/: CMakeLists.txt  main.cpp
source/search/: search.cpp  search.h
source/utils/: pch.h  profiling.cpp  profiling.h  utils.h
tests/: CMakeLists.txt  search.test.cpp
