set(TARGET_NAME search)
add_library(${TARGET_NAME} search/search.cpp search/search.h)
target_include_directories(${TARGET_NAME} INTERFACE ./)
install(TARGETS ${TARGET_NAME} ARCHIVE DESTINATION lib/)

set(TARGET_NAME profiling)
add_library(${TARGET_NAME} utils/profiling.cpp utils/profiling.h)
target_precompile_headers(${TARGET_NAME} PRIVATE utils/pch.h)
target_include_directories(${TARGET_NAME} INTERFACE ./)
install(TARGETS ${TARGET_NAME} ARCHIVE DESTINATION lib/)